--- a/public/home.html
+++ b/public/home.html
@@ -61,13 +61,15 @@
                         <label class="cd-signin-modal__label cd-signin-modal__label--email cd-signin-modal__label--image-replace" for="signin-email">E-mail</label>
                         <input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding cd-signin-modal__input--has-border"
                             id="Checkemail" type="email" placeholder="E-mail" required>
-                        <p id="emailErr"></p>
+                        <p id="emailErr" class="error"></p>
                     </p>
 
                     <p class="cd-signin-modal__fieldset">
                         <label class="cd-signin-modal__label cd-signin-modal__label--password cd-signin-modal__label--image-replace" for="signin-password">Password</label>
                         <input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding cd-signin-modal__input--has-border"
                             id="Checkpassword" type="password" placeholder="Password" required>
+                            <p id="passErr" class="error"></p>
+
                     </p>
                     <p class="cd-signin-modal__fieldset">
                         <input id="login" class="cd-signin-modal__input cd-signin-modal__input--full-width" type="submit" value="Login">
@@ -89,8 +91,8 @@
                     <p class="cd-signin-modal__fieldset">
                         <label class="cd-signin-modal__label cd-signin-modal__label--email cd-signin-modal__label--image-replace" for="signup-email">E-mail</label>
                         <input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding cd-signin-modal__input--has-border"
-                            id="email" type="email" placeholder="E-mail" required>
-                        <p id="emailErr" class="error"></p>
+                            id="email1" type="email" placeholder="E-mail" required>
+                        <p id="emailErr2" class="error"></p>
                     </p>
 
                     <p class="cd-signin-modal__fieldset">
